--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+[contenteditable='true']:empty:before {
+  content: attr(placeholder);
+  display: block;
+  color: #aaa;
+  cursor: text;
+}
+
 a {
   color: rgb(83, 83, 83);
   text-decoration: none;
